--- a/web/vercel.json
+++ b/web/vercel.json
@@ -1,3 +1,8 @@
 {
-    "public": "web"
+    "rewrites": [
+        {
+            "source": "/",
+            "destination": "/index.html"
+        }
+    ]
 }
